# python-rust-library-gs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  main.py  mimic-patients-A.csv  mimic-patients-B.csv  pyproject.toml
src/: lib.rs  source.rs
src/source/: csv.rs
