[package]
name = "python-rust-lib-gs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_rust_lib_gs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", default-features = false, features = ["macros", "abi3"] }
