[package]
name = "python-rust-lib-gs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_rust_lib_gs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", default-features = false, features = ["macros", "abi3"] }
async-trait = { version = "0.1", default-features = false, features = [] }
anyhow = { version = "1", default-features = false, features = ["std"] }
enum_dispatch = { version = "0.3" }
tokio = { version = "1.48", default-features = false, features = ["macros", "fs"] }

# TODO: figure out what's needed
polars = { version = "0.46", default-features = true, features = [
    "async",
    "lazy",
    "timezones"     # Needed due to a bug in 0.52 (https://github.com/pola-rs/polars/issues/25231)
] }
