[package]
name = "python-rust-lib-gs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_rust_lib_gs"
crate-type = ["cdylib"]

#[[bin]]
#name = "test"
#path = "src/bin/test.rs"

[dependencies]
pyo3 = { version = "0.27", default-features = false, features = [
    "extension-module",
    "macros",
    "abi3",
    "experimental-async",
] }
pyo3-async-runtimes = { version = "0.27", default-features = false, features = [
    "tokio-runtime",
] }
async-trait = { version = "0.1", default-features = false, features = [] }
anyhow = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1.48", default-features = false, features = [
    "macros",
    "fs",
    "rt-multi-thread",
] }
futures = { version = "0.3", default-features = false, features = [ "alloc" ] }

# TODO: figure out what's needed
polars = { version = "0.46", default-features = true, features = [
    "async",
    "lazy",
    "timezones", # Needed due to a bug in 0.52 (https://github.com/pola-rs/polars/issues/25231)
] }
arrow = { version = "57", default-features = false, features = [] }