[build-system]
requires = ["maturin>=1.9,<2.0", "pyarrow"]
build-backend = "maturin"

[project]
name = "python_rust_lib_gs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
